@@ -1,5 +1,13 @@
 2017-03-04  Bruno Haible  <bruno@clisp.org>
 
+	Fix "make check" error on Solaris 10.
+	Solaris 10 'tail' does understand the '-n' option.
+	* makemake.in (check-script): Use "sed -n -e '$p'" instead of
+	'tail -n 1'.
+	* clisp-link.in (clisp_eval): Likewise.
+
+2017-03-04  Bruno Haible  <bruno@clisp.org>
+
 	New configure option --enable-portability.
 	It favours portability over optimizations.
 	* makemake.in (info_help): Document option --enable-portability.
